Progress in inference

--- a/TODO
+++ b/TODO
@@ -1,2 +1,4 @@
-- Make unification errors actually decent by using substitution_result
-- Find a way to represent introduction of fresh variables (maybe use a richer representation for names)
+- Make sure substitution composition behaves as expected
+- Finish implementing inference
+- Write function to "freshen" type variables post-inference
+- Write some tests
